# traveller-book-parser

./: .gitignore  README.md  cli.ps1  justfile  main.py  pyproject.toml  requirements.txt  run.ps1
src/book_parsers/: book_parser.py
src/book_publishers/: column_names.py
src/book_publishers/mongoose/: column_names.py
src/description_loaders/: book_description_loader.py  file_type_loaders.py
src/description_models/: book_description.py  collection_description.py  data_source_description.py
src/entity_collections/: all_collection_parsers.py  parse_entities.py
src/html_data_source/: data_extract.py  data_source_description.py  pdftohtml_integration.py
src/html_table_data_source/: data_source_description.py  parse_collection_entities.py
src/settings/: __init__.py  settings.py
src/tabula_data_source/: data_extract.py  data_source_description.py  parse_collection_entities.py  tabula_integration.py
src/tabula_data_source/data_cleaners/: clean_data_frame.py  collapse_almost_empty_rows.py  line_separators.py  missing_tech_level.py
src/traveller_models/: base_entity.py  entity.py  entity_types.py
src/traveller_models/characteristics/: base_characteristic.py  characteristic.py  dexterity.py  education.py  endurance.py  influence.py  intellect.py  luck.py  social_standing.py  strength.py
src/traveller_models/items/: armour.py  base_item.py
src/traveller_models/skills/: base_skill.py  skill.py
src/traveller_models/validators/: __init__.py  dashes.py  skill_from_name.py  value_range_use_max.py
src/utils/: get_indented_exception_text.py
tests/: conftest.py
tests/parse/: test_parse_all_help_cli.py  test_parse_book_help_cli.py  test_parse_help_cli.py
tests/parse/__snapshots__/: test_parse_all_help_cli.ambr  test_parse_book_help_cli.ambr  test_parse_help_cli.ambr
tests/schema/: test_schema_cli.py  test_schema_help_cli.py  test_schema_settings_cli.py  test_schema_trav_book_parser_glossary_cli.py  test_schema_trav_glossary_cli.py  test_schema_trav_models_glossary_cli.py
tests/schema/__snapshots__/: test_schema_cli.ambr  test_schema_help_cli.ambr  test_schema_settings_cli.ambr  test_schema_trav_book_parser_glossary_cli.ambr  test_schema_trav_glossary_cli.ambr  test_schema_trav_models_glossary_cli.ambr
tests/test_traveller_models/: conftest.py  test_characteristics.py  test_entities.py  test_items.py
tests/traveller_models/: conftest.py  test_characteristics.py  test_characters.py  test_entities.py  test_items.py
tests/traveller_models/__snapshots__/: test_characters.ambr
traveller_book_parser/: cli.py  settings.py
traveller_book_parser/book_parsers/: book_parser.py
traveller_book_parser/book_publishers/mongoose/: __init__.py
traveller_book_parser/books/: book_description.py  load_book_description.py  parse_books.py
traveller_book_parser/books/publishers/: column_names.py
traveller_book_parser/cli_app/: app.py  entities.py  parse.py  schema.py
traveller_book_parser/data_parsers/: all_data_parsers.py  base_data_container.py  parse_data_entities.py  parse_objects_data.py
traveller_book_parser/data_parsers/data_cleaners/: missing_tech_level.py
traveller_book_parser/data_parsers/data_frame/: data_container.py  parse_data_entities.py  parse_entities.py  parse_objects_data.py
traveller_book_parser/data_parsers/entity_instrument/: image.py  instrument_entity.py
traveller_book_parser/data_sources/: all_data_extractors.py  data_source_description.py  extract_source_data.py
traveller_book_parser/data_sources/html/: data_extract.py  data_source_description.py  pages_range.py  pdftohtml_integration.py
traveller_book_parser/data_sources/html_table/: data_source_description.py  extract_source_data.py  parse_collection_entities.py
traveller_book_parser/data_sources/pdfplumber/: data_extract.py  data_source_description.py  extract_source_data.py  guess_header.py  parse_collection_entities.py  pdfplumber_integration.py
traveller_book_parser/data_sources/tabula/: data_extract.py  data_source_description.py  extract_source_data.py  parse_collection_entities.py  tabula_integration.py
traveller_book_parser/description_loaders/: book_description_loader.py
traveller_book_parser/description_models/: base_data_source_description.py  book_description.py  collection_description.py  data_source_description.py
traveller_book_parser/entity_collections/: all_collection_parsers.py  collection_description.py  parse_collection_name.py  parse_entities.py
traveller_book_parser/entity_instrumentation/: image.py
traveller_book_parser/html_data_source/: data_extract.py  data_source_description.py  pages_range.py
traveller_book_parser/html_table_data_source/: data_source_description.py  parse_collection_entities.py
traveller_book_parser/object_collections/: collection_description.py  parse_collection_name.py
traveller_book_parser/object_instrumentation/: image.py  instrument_object.py
traveller_book_parser/output_generators/: all_output_generators.py  base_output_generator.py  generate_output_data.py
traveller_book_parser/output_generators/twodsix/: generate_output_data.py  output_generator.py
traveller_book_parser/settings/: log_level.py
traveller_book_parser/tabula_data_source/: data_extract.py  data_source_description.py  parse_collection_entities.py
traveller_book_parser/tabula_data_source/data_cleaners/: clean_data_frame.py  line_separators.py  missing_tech_level.py  unnamed_columns.py
traveller_book_parser/traveller_database/: books.py  entities.py  entity_source_collections.py  object_source_collections.py  objects.py  output.py  output_options.py  update_database.py
traveller_book_parser/traveller_database/output_format/: cheat_sheet_pdf.py  (+3 more)
traveller_book_parser/traveller_models/: base_entity.py  book.py  entity.py  entity_source_collection.py  entity_types.py  trav_database.py  trav_glossary.py  trav_object.py  trav_object_base.py  trav_object_source_collection.py  trav_object_types.py  traveller_database.py
traveller_book_parser/utils/: __init__.py  ensure_folder.py  file_type_loaders.py  get_indented_exception_text.py
(+52 files in other folders)
